[gd_scene load_steps=13 format=2]

[ext_resource path="res://MobileRPG Resources/Images/Dungeon.png" type="Texture" id=1]
[ext_resource path="res://MobileRPG Resources/Images/Mobile RPG Mockup.png" type="Texture" id=2]
[ext_resource path="res://Slime.tscn" type="PackedScene" id=3]
[ext_resource path="res://Battle.gd" type="Script" id=4]
[ext_resource path="res://PlayerStats.gd" type="Script" id=5]
[ext_resource path="res://default_theme.tres" type="Theme" id=6]
[ext_resource path="res://StatsPanel.gd" type="Script" id=7]
[ext_resource path="res://SwordButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://HealButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://Rat.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=1]
resource_name = "FadeInOut"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Battle" type="Node"]
script = ExtResource( 4 )
enemies = [ ExtResource( 10 ), ExtResource( 3 ) ]

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource( 5 )
max_hp = 30

[node name="Dungeon" type="Sprite" parent="."]
position = Vector2( 45, 80 )
texture = ExtResource( 1 )

[node name="Mobile RPG Mockup" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.180392 )
position = Vector2( 45, 80 )
texture = ExtResource( 2 )

[node name="Transitions" type="AnimationPlayer" parent="."]
anims/FadeInOut = SubResource( 1 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsPanel" type="Panel" parent="UI"]
margin_left = 2.0
margin_top = 51.0
margin_right = 88.0
margin_bottom = 71.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsContainer" type="HBoxContainer" parent="UI/StatsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_right = 26.0
margin_bottom = 20.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "HP
25"
align = 1

[node name="AP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 30.0
margin_right = 56.0
margin_bottom = 20.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "AP
3"
align = 1

[node name="MP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 60.0
margin_right = 86.0
margin_bottom = 20.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "MP
10"
align = 1

[node name="TextBoxPanel" type="Panel" parent="UI"]
margin_left = 2.0
margin_top = 136.0
margin_right = 88.0
margin_bottom = 168.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoverInfoText" type="RichTextLabel" parent="UI/TextBoxPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
custom_styles/normal = SubResource( 2 )
custom_constants/line_separation = 3
text = "Here is some text
on multiple lines!"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleActionButtons" type="GridContainer" parent="UI"]
margin_left = 8.0
margin_top = 80.0
margin_right = 80.0
margin_bottom = 128.0
custom_constants/vseparation = 8
custom_constants/hseparation = 8
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sword" parent="UI/BattleActionButtons" instance=ExtResource( 8 )]

[node name="Heal" parent="UI/BattleActionButtons" instance=ExtResource( 9 )]
margin_left = 40.0
margin_right = 72.0

[node name="CenterContainer" type="CenterContainer" parent="UI"]
margin_top = 1.0
margin_right = 90.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextRoomButton" type="Button" parent="UI/CenterContainer"]
margin_left = 19.0
margin_top = 18.0
margin_right = 71.0
margin_bottom = 31.0
rect_min_size = Vector2( 52, 13 )
text = "Next Room"

[node name="EnemyPosition" type="Position2D" parent="."]
position = Vector2( 46, 34 )

[node name="Slime" parent="EnemyPosition" instance=ExtResource( 3 )]
max_hp = 33

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="ap_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_ap_changed"]
[connection signal="hp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_hp_changed"]
[connection signal="mp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_mp_changed"]
[connection signal="pressed" from="UI/CenterContainer/NextRoomButton" to="." method="_on_NextRoomButton_pressed"]
